--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
+@font-face {
+  font-family: 'MayflowerAntique';
+  src: url('./assets/fonts/MayflowerAntique.ttf');
+}
+
 * {
-    box-sizing: border-box;
-    font-family: 'IM Fell English SC', serif;
-  
+    box-sizing: border-box;  
+    font-family: 'Quicksand', sans-serif;
+    line-height: normal;
 }
 
 body {
@@ -16,6 +21,7 @@ section {
 
 h1 {
   text-align: center;
+  font-family: 'MayflowerAntique';
 }
 
 p {
