- changed description and title of the project - refactored code - changed header styling and added header component - fixed bugs in smaller screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-@font-face {
+:root {
+  --border-radius-large: 10px;
+  --primary-background-color: #1a2f41;
+}
+
+  @font-face {
   font-family: 'MayflowerAntique';
   src: url('./assets/fonts/MayflowerAntique.ttf');
 }
